Bug 149935 - Insert Hyperlink: "Target in document" window does not remember last user position and size
Summary: Insert Hyperlink: "Target in document" window does not remember last user pos...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: lowest trivial
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Hyperlink-Dialog
  Show dependency treegraph
 
Reported: 2022-07-10 10:29 UTC by R. Green
Modified: 2023-11-06 22:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description R. Green 2022-07-10 10:29:52 UTC
Version: 7.1.5.2 / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

Just a small thing perhaps.

The default width of the "Target in document" (Insert Hyperlink) window is often too narrow to allow you to see the list entries.

Suggestion: Allow the user to hover the mouse over an entry to reveal a tooltip with the same name as the entry.
Comment 1 Ezinne 2022-07-21 21:18:41 UTC
Please can you share a screenshot or recording showing the issue that you are experiencing?

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 36994c19fdbf425108f685de21464496bd93b651
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-NG (en_NG); UI: en-US
Calc: threaded
Comment 2 R. Green 2022-11-18 21:19:13 UTC
The issue is that the the target in document window does not remember the last user-set size. So, if I widen it to see more of the headings, when closed and reopened, it reverts to the default width.

So the issue is really, can this be fixed so that the last size and position of the window is remembered when closed? I have changed the title to relect this.
Comment 3 Buovjaga 2023-03-03 14:42:52 UTC
Repro.

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: edaf6155496d452c67aa191c1d45a0328ef079e0
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 3 March 2023

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 687b950702c49c90cff9a43655ea97a0343799a0
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-US
Calc: threaded
Comment 4 Andreas Heinisch 2023-11-03 11:26:23 UTC
The initial window will be positioned relatively to the opening window. Should we remember the position by session (closing and opening resets the positions), or should it remembered in any case even after the user closes the document?

As an alternative, we just remember the size of the dialog. Opinions?
Comment 5 Commit Notification 2023-11-06 21:40:31 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf927cb4513f8ef2a5205e98fbcf1ff02c344b4a

tdf#149935 - Hyperlink Target Dialog: remember last used position and size

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.