tdf#149935 - Hyperlink Target Dialog: remember last used position and size

Change-Id: I87fdf78b6ec4963eb4450d937dd86209e03865a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158879
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>